feat: projects api
