# src/routes.ts
@@ -1,10 +1,13 @@
 import express from 'express'
 
-import * as templates from './templates'
+import { ProjectRouter } from './service/projects'
 
 const router = express.Router()
 
-router.post(`/template`, templates.create)
-router.get(`/templates`, templates.getAll)
+router.post(`/projects/create`, ProjectRouter.create)
+router.post(`/projects/update`, ProjectRouter.update)
+router.post(`/projects/deploy`, ProjectRouter.deploy)
+router.get(`/projects/:projectId`, ProjectRouter.get)
+router.get(`/projects`, ProjectRouter.list)
 
 export default router
