# swagger.yaml
@@ -8,11 +8,11 @@ tags:
   - name: Template
     description: Solidity source code and configuration files for each step are provided to enable our automation engine to deploy them to the test node
 paths:
-  /templates/list:
+  /projects:
     get:
       tags:
-        - Template
-      summary: Get all existing template
+        - Project & Template
+      summary: Get all projects
       responses:
         "200":
           description: Successful
@@ -21,57 +21,143 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Template"
-  /templates/create:
+                  $ref: "#/components/schemas/Project"
+  /projects/:projectId:
+    get:
+      tags:
+        - Project & Template
+      summary: Get project and all its templates
+      responses:
+        "200":
+          description: Successful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Project"
+  /projects/create:
     post:
       tags:
-        - Template
-      summary: Create template
+        - Project & Template
+      summary: Create project
       requestBody:
         description: Item to be created
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/TemplateBody"
+              $ref: "#/components/schemas/ProjectCreateBody"
       responses:
         "200":
           description: Successful
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Template"
-  /templates/deploy:
+                $ref: "#/components/schemas/Project"
+  /projects/update:
     post:
       tags:
-        - Template
-      summary: Deploy template
+        - Project & Template
+      summary: Update project
       requestBody:
-        description: Provide ID of Template & Node to be deployed
+        description: Item to be created
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ProjectUpdateBody"
+      responses:
+        "200":
+          description: Successful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Project"
+  /projects/deploy:
+    post:
+      tags:
+        - Project & Template
+      summary: Deploy project
+      requestBody:
+        description: Item to be created
         required: true
         content:
           application/json:
             schema:
               type: object
               properties:
-                templateId:
-                  type: string
-                  required: true
-                nodeId:
-                  type: string
-                  required: true
+                projectId:
+                  type: integer
+                  format: int64
+                  examples: [1, 2, 3, 4]
       responses:
         "200":
           description: Successful
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
+                $ref: "#/components/schemas/Project"
+
 components:
   schemas:
+    ProjectCreateBody:
+      type: object
+      properties:
+        name:
+          type: string
+          examples: [Pacmon, Pragma, Papaya]
+        templates:
+          type: array
+          items:
+            $ref: "#/components/schemas/TemplateBody"
+      required:
+        - name
+        - templates
+    ProjectUpdateBody:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          examples: [1, 2, 3, 4]
+        name:
+          type: string
+          examples: [Pacmon, Pragma, Papaya]
+        templates:
+          type: array
+          items:
+            $ref: "#/components/schemas/TemplateBody"
+      required:
+        - id
+        - name
+        - templates
+    Project:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          examples: [1, 2, 3, 4]
+        name:
+          type: string
+          examples: [Pacmon, Pragma, Papaya]
+        templates:
+          type: array
+          items:
+            $ref: "#/components/schemas/Template"
+    ProjectMinimal:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          examples: [1, 2, 3, 4]
+        name:
+          type: string
+          examples: [Pacmon, Pragma, Papaya]
+        templates:
+          type: array
+          items:
+            $ref: "#/components/schemas/TemplateMinimal"
     Template:
       type: object
       properties:
@@ -89,6 +175,14 @@ components:
           type: string
           enum: [ACTIVE, INACTIVE]
           default: ACTIVE
+        address:
+          type: string
+          nullable: true
+          examples: ["0x1234567890"]
+        projectId:
+          type: integer
+          format: int64
+          examples: [1, 2, 3, 4]
     TemplateBody:
       type: object
       properties:
@@ -105,3 +199,24 @@ components:
         - script
         - configuration
         - sequence
+    TemplateMinimal:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          examples: [1, 2, 3, 4]
+        sequence:
+          type: integer
+        status:
+          type: string
+          enum: [ACTIVE, INACTIVE]
+          default: ACTIVE
+        address:
+          type: string
+          nullable: true
+          examples: ["0x1234567890"]
+        projectId:
+          type: integer
+          format: int64
+          examples: [1, 2, 3, 4]
